2024-10-28T01:12:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11545526070 # 462
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-28
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 178 244 / 180 246
* notice: next accum: outdated-unq outdated-all / unq all: 179 245 / 180 246
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-13] / []

2024-10-21T01:11:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11431352496 # 455
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-21
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 178 244 / 179 245
* notice: next accum: outdated-unq outdated-all / unq all: 178 244 / 180 246
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-20]

2024-10-14T01:10:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11319333123 # 448
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 177 243 / 178 244
* notice: next accum: outdated-unq outdated-all / unq all: 178 244 / 179 245
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-18] / [2024-10-13]

2024-10-01T01:15:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11116805423 # 435