@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2024-10-28T01:12:20Z",
-  "count_outdated" : 245,
-  "uniques_outdated" : 179,
-  "count" : 246,
-  "uniques" : 180,
+  "timestamp" : "2025-01-11T01:10:03Z",
+  "count_outdated" : 246,
+  "uniques_outdated" : 180,
+  "count" : 247,
+  "uniques" : 181,
   "clones" : [
     {
-      "timestamp": "2024-10-20T00:00:00Z",
+      "timestamp": "2025-01-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
