@@ -1,3 +1,12 @@
+2025-01-11T01:10:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12719734545 # 537
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-11
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 179 245 / 180 246
+* notice: next accum: outdated-unq outdated-all / unq all: 180 246 / 181 247
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-10-20] / [2025-01-10]
+
 2024-10-28T01:12:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11545526070 # 462
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-28
